--- a/examples/notebooks/Hydrological_example.ipynb
+++ b/examples/notebooks/Hydrological_example.ipynb
@@ -57,6 +57,8 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore') # to hide warning messages\n",
     "\n",
+    "sys.path.append("../../src/")\n",
+    "\n",
     "# Module to perform PAWN:\n",
     "import safepython.PAWN as PAWN\n",
     "# Module to visualize the results:\n",
