--- a/examples/notebooks/Hydrological_example.ipynb
+++ b/examples/notebooks/Hydrological_example.ipynb
@@ -57,7 +57,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore') # to hide warning messages\n",
     "\n",
-    "sys.path.append("../../src/")\n",
+    "sys.path.append(\"../../src\")\n",
     "\n",
     "# Module to perform PAWN:\n",
     "import safepython.PAWN as PAWN\n",
