--- a/examples/notebooks/Hydrological_example.ipynb
+++ b/examples/notebooks/Hydrological_example.ipynb
@@ -55,7 +55,7 @@
     "import scipy.stats as st\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore') # to hide warning messages\n",
-    "sys.path.append(\"../../src\")\n",
+    "sys.path.append(\"../../src/\")\n",
     "# Module to perform PAWN:\n",
     "import safepython.PAWN as PAWN\n",
     "# Module to visualize the results:\n",
