--- a/examples/notebooks/Ecological_example.ipynb
+++ b/examples/notebooks/Ecological_example.ipynb
@@ -65,6 +65,7 @@
     "import scipy.stats as st\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore') # to hide warning messages\n",
+    "sys.path.append(\"../../src/\")\n",
     "import safepython.PAWN as PAWN # Module that simulates the ecological model\n",
     "import safepython.plot_functions as pf # Module to visualize the results\n",
     "from safepython.model_execution import model_execution # Module to execute the model\n",
