--- a/examples/notebooks/Ecological_example.ipynb
+++ b/examples/notebooks/Ecological_example.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# GSA tutorial - What are the key controls of a system?\n",
     "\n",
-    "Francesca Pianosi, Fanny Sarrazin, Andres Penuela-Fernandez\n",
+    "Francesca Pianosi, Fanny Sarrazin, Andres Peñuela\n",
     "\n",
     "Mathematical models can be used to test hypotheses and increase our understanding of the functioning of the system they represent. Model simulations can be used to explore under which conditions a system will reach a particular state, or to anticipate the effects of human interventions. For example, a mathematical model of an ecological system represents the interactions between different species within a certain habitat. Such a model could be used to identify the conditions under which all the spieces can coexist, or the conditions that would lead to extinction of a particular species; or it could be used to assess the effects of introducing or removing a certain number of individuals of a spieces - for example through hunting or fishing. The underlying assumption here is that the model is a realistic representation of the system, so that what is learnt about the model behaviour applies to the system behaviour too. In this Notebook we show how Global Sensitivity Analysis (GSA) can help in this context, and in particular how GSA can help identify the key controls of the system response.\n",
     "\n",
@@ -65,7 +65,6 @@
     "import scipy.stats as st\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore') # to hide warning messages\n",
-    "sys.path.append(\"../../src/\")\n",
     "import safepython.PAWN as PAWN # Module that simulates the ecological model\n",
     "import safepython.plot_functions as pf # Module to visualize the results\n",
     "from safepython.model_execution import model_execution # Module to execute the model\n",
