--- a/examples/notebooks/Hydrological_example.ipynb
+++ b/examples/notebooks/Hydrological_example.ipynb
@@ -8,7 +8,7 @@
     "**How to use a Jupyter Notebook**: You can execute the blocks of code one at the time by placing the mouse in the grey box and pressing shift + enter. An asterisk will appear in the brackets at the top left of the box while the code is being executed (this may take few seconds) and turns into a number when the execution is over. Alternatively, you can run all the code in the Notebook in a single step by clicking on the menu Cell -> Run All.*\n",
     "\n",
     "# GSA tutorial - What are the most important parameters in a mathematical model?\n",
-    "Francesca Pianosi, Fanny Sarrazin, Andres Penuela-Fernandez\n",
+    "Francesca Pianosi, Fanny Sarrazin, Andres Peñuela\n",
     "\n",
     "Mathematical models often encompass a large number of parameters. The value of these parameters for a particular application are decided by the modeller based on information about the quantities that these parameters represent (for example, measurements from field work or from lab experiments). Alternatively, if the modeller possesses some observations of the system' input and output variables, the parameterss can be estimated by finding the values that makes the model best fit those observations (this process is called *model calibration*). \n",
     "In both cases, determining the 'right' parameter values is often difficult and time consuming, as it may require acquiring and handling a lot of data and/or using of a lot of computing power (if the model is calibrated using a computer algorithm). In this Notebook we see how Global Sensitivity Analysis (GSA) can help in this context, by allowing us to determine the relative importance of the parameters on the model predictions, and therefore identify the most influential parameters on which estimation efforts should be focused on.\n",
@@ -55,7 +55,6 @@
     "import scipy.stats as st\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore') # to hide warning messages\n",
-    "sys.path.append(\"../../src/\")\n",
     "# Module to perform PAWN:\n",
     "import safepython.PAWN as PAWN\n",
     "# Module to visualize the results:\n",
